# Internetradio

./: README.md  pyproject.toml  requirements.txt  setup.sh
boot/: config.txt
conf/: radio_sender.m3u
config/etc/: mpd.conf
etc/: asound.conf  mpd.conf
etc/init.d/: radio
etc/samba/: smb.conf
etc/wpa_supplicant/: wpa_supplicant.conf
home/pi/raspiradio/conf/: radio_sender.m3u
home/pi/raspiradio/prog/: LCDaus_text.py  i2c_lib.py  lc_display.py  lcd_display.py  mein_radio.py  radio.py
lib/systemd/system/: LCDaus_text.service
prog/: LCDaus_text.py  display.py  i2c_lib.py  lc_display.py  radio.py
sys_config/boot/: config.txt
sys_config/etc/: asound.conf  mpd.conf
sys_config/etc/init.d/: radio
sys_config/lib/systemd/system/: LCDaus_text.service  radio.service
test/: test_radio.py
